# build-your-own-in-rust

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  README.md  docker-compose.yaml  rust-toolchain.toml
.github/workflows/: general.yml  json-parser-audit.yml  json-parser-general.yml  load-balancer-audit.yml  load-balancer-general.yml  url-shortener-audit.yml  url-shortener-general.yml  web-server-audit.yml  web-server-general.yml
json-parser/: Cargo.toml  README.md  rustfmt.toml
json-parser/resources/test-files/step4/: valid2.json
json-parser/src/: lexer.rs  main.rs  parser.rs
json-parser/src/lexer/: domain.rs  mod.rs
json-parser/src/parser/: domain.rs  mod.rs
load-balancer/: Cargo.toml  README.md  docker-compose.yaml  rust-toolchain.toml  urls.txt
load-balancer/load-balancer/: Cargo.toml  Dockerfile
load-balancer/load-balancer/configuration/: base.yaml  docker.yaml
load-balancer/load-balancer/src/: configuration.rs  main.rs  proxy.rs  startup.rs
load-balancer/load-balancer/src/domain/: models.rs
load-balancer/load-balancer/src/healthchecks/: healthchecker.rs
load-balancer/load-balancer/tests/: load_balancer_spec.rs
load-balancer/server/: Cargo.toml  Dockerfile
load-balancer/server/src/: main.rs  startup.rs
load-balancer/server/tests/: server_spec.rs
load_balancer/: Cargo.toml
load_balancer/configuration/: base.yaml
load_balancer/src/: configuration.rs  lib.rs  main.rs  startup.rs
load_balancer/src/domain/: models.rs
load_balancer/src/healthchecker/: healthchecker.rs
load_balancer/src/healthchecks/: healthchecker.rs
load_balancer/src/targets/: models.rs
load_balancer/tests/: load_balancer_spec.rs
server/: Cargo.toml
server/src/: main.rs  startup.rs
server/tests/: server_spec.rs
url-shortener/: .env  Cargo.toml  Dockerfile  README.md  docker-compose.yaml  index.html
url-shortener/mongo/scripts/: init-mongo.sh
url-shortener/src/: lib.rs  main.rs  startup.rs
url-shortener/src/domain/: database_models.rs  http_request.rs  http_response.rs  mod.rs
url-shortener/src/lib/: config.rs  domain.rs
url-shortener/src/lib/domain/urls/: models.rs  ports.rs  service.rs
url-shortener/src/lib/domain/urls/models/: short_url.rs
url-shortener/src/lib/inbound/: http.rs
url-shortener/src/lib/inbound/http/: handlers.rs
url-shortener/src/lib/inbound/http/handlers/: monitoring.rs  short_urls.rs
url-shortener/src/lib/outbound/: mongo.rs
url-shortener/src/repository/: mod.rs  mongo_repository.rs  url_shortener_repository.rs
url-shortener/src/routes/: mod.rs  private.rs  urls.rs
url-shortener/tests/: short_url_api_spec.rs  url_shortener_spec.rs
web-server/: Cargo.toml  README.md  rust-toolchain.toml
web-server/src/: domain.rs  lib.rs  main.rs  startup.rs
web-server/src/domain/: http_request.rs  http_response.rs
web-server/tests/: web_server_spec.rs
web-server/www/: index.html
web-server/www/foobar/: aloha.html  index.html
