[workspace]
resolver = "2"
members = [
    "load-balancer",
    "server"
]

[workspace.dependencies]
tokio = { version = "1.46.1", features = ["full"] }
http-body-util = "0.1.3"
hyper = { version = "1.6.0", features = ["full"] }
hyper-util = { version = "0.1.10", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.20"