[package]
name = "load_balancer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.35.1", features = ["full"] }
http-body-util = "0.1.0"
hyper = { version = "1.2.0", features = ["full"] }
hyper-util = { version = "0.1.3", features = ["full"] }
uuid = { version = "1.7.0", features = ["v4"] }
config = "0.14.0"
serde = { version = "1.0.197", features = ["derive"] }
serde-aux = "4.5.0"
reqwest = "0.11.24"

[dev-dependencies]
server = { path = "../server" }