[package]
name = "url-shortener"
version = "0.1.0"
edition = "2024"

[lib]
name = "url_shortener"
path = "src/lib/lib.rs"

[[bin]]
name = "url-shortener-server"
path = "src/bin/server/main.rs"

[dependencies]
anyhow = { workspace = true }
tokio = { workspace = true }
nanoid = { workspace = true }
thiserror = { workspace = true }
url = { workspace = true, features = ["serde"] }
serde = { workspace = true }
serde_json = { workspace = true }
mongodb = { workspace = true, features = ["rustls-tls"] }
actix-web = { workspace = true }
env_logger = { workspace = true }
reqwest = { workspace = true, features = ["json"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[dev-dependencies]
mockall = { workspace = true }
testcontainers = { workspace = true }
testcontainers-modules = { workspace = true }

