[package]
name = "load-balancer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { workspace = true }
http-body-util = { workspace = true }
hyper = { workspace = true }
hyper-util = { workspace = true }
config = "0.15.9"
serde = { version = "1.0.218", features = ["derive"] }
serde-aux = "4.6.0"
reqwest = "0.12.12"

[dev-dependencies]
server = { path = "../server" }