[package]
name = "load-balancer"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { workspace = true }
http-body-util = { workspace = true }
hyper = { workspace = true }
hyper-util = { workspace = true }
config = "0.15.11"
serde = { version = "1.0.219", features = ["derive"] }
serde-aux = "4.6.0"
reqwest = "0.12.14"

[dev-dependencies]
server = { path = "../server" }