[package]
name = "load-balancer"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.44.2", features = ["full"] }
http-body-util = "0.1.3"
hyper = { version = "1.6.0", features = ["full"] }
hyper-util = { version = "0.1.10", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
config = "0.15.11"
serde = { version = "1.0.219", features = ["derive"] }
serde-aux = "4.6.0"
reqwest = "0.12.14"

[dev-dependencies]
server = { path = "../server" }